# qqbytop

./: .env.example  .gitignore  README.md  about-pricing-blog.md  about-pricing-blog补充.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  start-seo-pipeline.bat  start-seo-pipeline.ps1  tsconfig.json  一键保存为稳定版.bat  一键保存当前版本.bat  一键打开高考诊断后台.bat  交互选择恢复版本.bat  保存当前版本.ps1  启动高考诊断后台.ps1  启动高考诊断本地真实DeepSeek.bat  总纲.md  恢复到高考稳定版.bat  整改方案.md  服务详情页.md  查看可恢复版本.bat  查看或恢复版本.ps1  行业方案页.md  行业方案页补充.md
app/: globals.css  layout.tsx  not-found.tsx  sitemap.ts
backend/: .env.local-deepseek.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/adapters/: llm.py  ocr.py  payment.py  storage.py  support_llm.py
backend/app/models/: schemas.py
backend/app/routers/: admin.py  drafts.py  health.py  orders.py  reports.py  support.py
backend/app/services/: core.py  postgres_repository.py  queues.py  rate_limit.py  report_quality.py  repository.py  security.py  text_utils.py
backend/migrations/: 001_gaokao_essay.sql
backend/prompts/: gaokao_default.md  gaokao_error_taxonomy.md  gaokao_experiment.md  gaokao_scoring_rubric.md  gaokao_writing_checklist.md
backend/tests/: test_gaokao_flow.py  test_gaokao_task_extraction.py
backend/tools/: batch_report_tester.py  extract_gaokao_tasks.py
components/: LegacyHtml.tsx
content/: manifest.csv  manifest.json
diagnose-tools/: .env.example  .gitignore  app.js  index.html  package.json  robots.txt  server.mjs  sitemap.xml  start-web.ps1  手动按钮.txt
lib/: seo.ts  (+16 more)
(+424 files in other folders)
