[project]
name = "gaokao-essay-backend"
version = "0.1.0"
description = "FastAPI backend for Gaokao English essay diagnostic tool."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.124.0",
  "openai>=2.13.0",
  "psycopg[binary]>=3.3.2",
  "uvicorn[standard]>=0.38.0",
  "pydantic-settings>=2.12.0",
  "qcloud-python-sts>=3.1.6",
  "cos-python-sdk-v5>=1.9.38",
  "redis>=7.1.0",
  "requests>=2.34.0",
  "tencentcloud-sdk-python>=3.0.1500",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "httpx>=0.28.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
